--- a/css/main.css
+++ b/css/main.css
@@ -250,11 +250,9 @@ input[type=submit]:hover {
   }
 
   .hero-third {
-    background: linear-gradient(
-      rgba(0,0,0, 0.2),
-      rgba(0,0,0, 0.3)
-      ), url("../img/service.jpeg") no-repeat center center fixed;
-    background-size: inherit;
+    background-image: url("../img/service.jpeg");
+    background-size: cover;
+    background-position: 80% 50%;
     position: relative;
     min-height: 90vh;
     margin: 40px 15px 0px 15px;
